feat(role): 更新角色权限时自动包含父级菜单
-增加参数校验，提高接口的健壮性
- 优化权限更新逻辑，自动包含选中菜单的父级菜单
- 使用递归方法添加父级菜单ID
- 优化代码结构，提高可读性和可维护性